Add - Project description to each project

--- a/projects.html
+++ b/projects.html
@@ -24,76 +24,117 @@
             </div>
             <div class="projects-projects-desc">
                 <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn" onclick="">
+                <div class="projects-projects-desc-btn">
                     <i class="fa fa-github icons"></i>
                 </div>
-                <div class="projects-projects-desc-tech-stack" onclick="">
+                <div class="projects-projects-desc-tech-stack">
                     Tech • Stack
+                </div>
+                <div class="projects-projects-desc-desc" onclick=>
+                    Lorem ipsum is a project about dolor sit amet consectetur adipiscing elit.
+                    Vestibulum in aliquet metus, sit amet commodo quam. Nam sagittis quam nibh, id eleifend massa
+                    accumsan et.
+                    Nam pulvinar accumsan metus, id congue erat.
                 </div>
             </div>
         </div>
+
         <div class="projects-projects">
             <div class="projects-projects-thumbnail">
             </div>
             <div class="projects-projects-desc">
                 <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn" onclick="">
+                <div class="projects-projects-desc-btn">
                     <i class="fa fa-github icons"></i>
                 </div>
-                <div class="projects-projects-desc-tech-stack" onclick="">
+                <div class="projects-projects-desc-tech-stack">
                     Tech • Stack
+                </div>
+                <div class="projects-projects-desc-desc" onclick=>
+                    Lorem ipsum is a project about dolor sit amet consectetur adipiscing elit.
+                    Vestibulum in aliquet metus, sit amet commodo quam. Nam sagittis quam nibh, id eleifend massa
+                    accumsan et.
+                    Nam pulvinar accumsan metus, id congue erat.
                 </div>
             </div>
         </div>
+
         <div class="projects-projects">
             <div class="projects-projects-thumbnail">
             </div>
             <div class="projects-projects-desc">
                 <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn" onclick="">
+                <div class="projects-projects-desc-btn">
                     <i class="fa fa-github icons"></i>
                 </div>
-                <div class="projects-projects-desc-tech-stack" onclick="">
+                <div class="projects-projects-desc-tech-stack">
                     Tech • Stack
+                </div>
+                <div class="projects-projects-desc-desc" onclick=>
+                    Lorem ipsum is a project about dolor sit amet consectetur adipiscing elit.
+                    Vestibulum in aliquet metus, sit amet commodo quam. Nam sagittis quam nibh, id eleifend massa
+                    accumsan et.
+                    Nam pulvinar accumsan metus, id congue erat.
                 </div>
             </div>
         </div>
+
         <div class="projects-projects">
             <div class="projects-projects-thumbnail">
             </div>
             <div class="projects-projects-desc">
                 <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn" onclick="">
+                <div class="projects-projects-desc-btn">
                     <i class="fa fa-github icons"></i>
                 </div>
-                <div class="projects-projects-desc-tech-stack" onclick="">
+                <div class="projects-projects-desc-tech-stack">
                     Tech • Stack
+                </div>
+                <div class="projects-projects-desc-desc" onclick=>
+                    Lorem ipsum is a project about dolor sit amet consectetur adipiscing elit.
+                    Vestibulum in aliquet metus, sit amet commodo quam. Nam sagittis quam nibh, id eleifend massa
+                    accumsan et.
+                    Nam pulvinar accumsan metus, id congue erat.
                 </div>
             </div>
         </div>
+
         <div class="projects-projects">
             <div class="projects-projects-thumbnail">
             </div>
             <div class="projects-projects-desc">
                 <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn" onclick="">
+                <div class="projects-projects-desc-btn">
                     <i class="fa fa-github icons"></i>
                 </div>
-                <div class="projects-projects-desc-tech-stack" onclick="">
+                <div class="projects-projects-desc-tech-stack">
                     Tech • Stack
+                </div>
+                <div class="projects-projects-desc-desc" onclick=>
+                    Lorem ipsum is a project about dolor sit amet consectetur adipiscing elit.
+                    Vestibulum in aliquet metus, sit amet commodo quam. Nam sagittis quam nibh, id eleifend massa
+                    accumsan et.
+                    Nam pulvinar accumsan metus, id congue erat.
                 </div>
             </div>
         </div>
+
         <div class="projects-projects">
             <div class="projects-projects-thumbnail">
             </div>
             <div class="projects-projects-desc">
                 <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn" onclick="">
+                <div class="projects-projects-desc-btn">
                     <i class="fa fa-github icons"></i>
                 </div>
-                <div class="projects-projects-desc-tech-stack" onclick="">
+                <div class="projects-projects-desc-tech-stack">
                     Tech • Stack
+                </div>
+                <div class="projects-projects-desc-desc" onclick=>
+                    Lorem ipsum is a project about dolor sit amet consectetur adipiscing elit.
+                    Vestibulum in aliquet metus, sit amet commodo quam. Nam sagittis quam nibh, id eleifend massa
+                    accumsan et.
+                    Nam pulvinar accumsan metus, id congue erat.
                 </div>
             </div>
         </div>
