Update - Website's favicon to a personalized logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="static/css/index.css">
     <link rel="stylesheet" href="static/css/shared.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/gif" href="static/img/icon.gif">
+    <link rel="icon" type="image/png" href="static/img/Logo.png">
 </head>
 
 <body>
@@ -49,9 +49,8 @@
                 <a href="mailto:Mohamed.Y.Abdelnasser@gmail.com" style="text-decoration: none;" target="_blank">
                     <i class="fa fa-envelope-square icons fa-2x home-social-icon"></i>
                 </a>
-                <a href="static/docs/Ezn Sfr UAE 11-04-2023.pdf" style="text-decoration: none;" id="home-cv-logo"
-                    target="_blank">
-                    CV
+                <a href="static/docs/Ezn Sfr UAE 11-04-2023.pdf" style="text-decoration: none;" target="_blank">
+                    <img src="static/img/CV-Logo-Dark.png" id="home-cv-logo-img" alt="CV">
                 </a>
             </div>
         </div>
