--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="static/css/projects.css">
     <link rel="stylesheet" href="static/css/shared.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/gif" href="static/img/icon.gif">
+    <link rel="icon" type="image/png" href="static/img/Logo.png">
 </head>
 
 <body>
@@ -24,14 +24,14 @@
             </div>
             <div class="projects-projects-desc">
                 <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn">
+                <div class="projects-projects-desc-btn" onclick="">
                     <i class="fa fa-github icons"></i>
                 </div>
                 <div class="projects-projects-desc-tech-stack">
                     Tech • Stack
                 </div>
-                <div class="projects-projects-desc-desc" onclick=>
-                    Lorem ipsum is a project about dolor sit amet consectetur adipiscing elit.
+                <div class="projects-projects-desc-desc">
+                    Lorem ipsum is a project about dolor sit amet consect adipiscing elit.
                     Vestibulum in aliquet metus, sit amet commodo quam. Nam sagittis quam nibh, id eleifend massa
                     accumsan et.
                     Nam pulvinar accumsan metus, id congue erat.
@@ -44,14 +44,14 @@
             </div>
             <div class="projects-projects-desc">
                 <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn">
+                <div class="projects-projects-desc-btn" onclick="">
                     <i class="fa fa-github icons"></i>
                 </div>
                 <div class="projects-projects-desc-tech-stack">
                     Tech • Stack
                 </div>
-                <div class="projects-projects-desc-desc" onclick=>
-                    Lorem ipsum is a project about dolor sit amet consectetur adipiscing elit.
+                <div class="projects-projects-desc-desc">
+                    Lorem ipsum is a project about dolor sit amet consect adipiscing elit.
                     Vestibulum in aliquet metus, sit amet commodo quam. Nam sagittis quam nibh, id eleifend massa
                     accumsan et.
                     Nam pulvinar accumsan metus, id congue erat.
@@ -64,14 +64,14 @@
             </div>
             <div class="projects-projects-desc">
                 <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn">
+                <div class="projects-projects-desc-btn" onclick="">
                     <i class="fa fa-github icons"></i>
                 </div>
                 <div class="projects-projects-desc-tech-stack">
                     Tech • Stack
                 </div>
-                <div class="projects-projects-desc-desc" onclick=>
-                    Lorem ipsum is a project about dolor sit amet consectetur adipiscing elit.
+                <div class="projects-projects-desc-desc">
+                    Lorem ipsum is a project about dolor sit amet consect adipiscing elit.
                     Vestibulum in aliquet metus, sit amet commodo quam. Nam sagittis quam nibh, id eleifend massa
                     accumsan et.
                     Nam pulvinar accumsan metus, id congue erat.
@@ -84,14 +84,14 @@
             </div>
             <div class="projects-projects-desc">
                 <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn">
+                <div class="projects-projects-desc-btn" onclick="">
                     <i class="fa fa-github icons"></i>
                 </div>
                 <div class="projects-projects-desc-tech-stack">
                     Tech • Stack
                 </div>
-                <div class="projects-projects-desc-desc" onclick=>
-                    Lorem ipsum is a project about dolor sit amet consectetur adipiscing elit.
+                <div class="projects-projects-desc-desc">
+                    Lorem ipsum is a project about dolor sit amet consect adipiscing elit.
                     Vestibulum in aliquet metus, sit amet commodo quam. Nam sagittis quam nibh, id eleifend massa
                     accumsan et.
                     Nam pulvinar accumsan metus, id congue erat.
@@ -104,14 +104,14 @@
             </div>
             <div class="projects-projects-desc">
                 <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn">
+                <div class="projects-projects-desc-btn" onclick="">
                     <i class="fa fa-github icons"></i>
                 </div>
                 <div class="projects-projects-desc-tech-stack">
                     Tech • Stack
                 </div>
-                <div class="projects-projects-desc-desc" onclick=>
-                    Lorem ipsum is a project about dolor sit amet consectetur adipiscing elit.
+                <div class="projects-projects-desc-desc">
+                    Lorem ipsum is a project about dolor sit amet consect adipiscing elit.
                     Vestibulum in aliquet metus, sit amet commodo quam. Nam sagittis quam nibh, id eleifend massa
                     accumsan et.
                     Nam pulvinar accumsan metus, id congue erat.
@@ -124,14 +124,14 @@
             </div>
             <div class="projects-projects-desc">
                 <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn">
+                <div class="projects-projects-desc-btn" onclick="">
                     <i class="fa fa-github icons"></i>
                 </div>
                 <div class="projects-projects-desc-tech-stack">
                     Tech • Stack
                 </div>
-                <div class="projects-projects-desc-desc" onclick=>
-                    Lorem ipsum is a project about dolor sit amet consectetur adipiscing elit.
+                <div class="projects-projects-desc-desc">
+                    Lorem ipsum is a project about dolor sit amet consect adipiscing elit.
                     Vestibulum in aliquet metus, sit amet commodo quam. Nam sagittis quam nibh, id eleifend massa
                     accumsan et.
                     Nam pulvinar accumsan metus, id congue erat.
@@ -173,7 +173,6 @@
     <div id="overlay">
     </div>
 
-    <!-- <script type="text/javascript" src="static/js/projects.js"></script> -->
     <script type="text/javascript" src="static/js/shared.js"></script>
 
 </body>
