--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="static/css/about.css">
     <link rel="stylesheet" href="static/css/shared.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/gif" href="static/img/icon.gif">
+    <link rel="icon" type="image/png" href="static/img/Logo.png">
 
 </head>
 
@@ -53,6 +53,16 @@
         <hr>
 
         <div id="about-div-1">
+
+            <div id="about-knowledge">
+                <span id="about-knowledge-title">Knowledge</span>
+
+                <span class="about-knowledge-item">1</span>
+                <span class="about-knowledge-item">1</span>
+                <span class="about-knowledge-item">1</span>
+                <span class="about-knowledge-item">1</span>
+            </div>
+
             <div id="about-personal-info">
                 <span id="about-personal-info-title">Personal Information</span>
                 <span class="about-personal-info-q">
@@ -90,15 +100,6 @@
                     English, Arabic
                 </span>
 
-            </div>
-
-            <div id="about-knowledge">
-                <span id="about-knowledge-title">Knowledge</span>
-
-                <span class="about-knowledge-item">1</span>
-                <span class="about-knowledge-item">1</span>
-                <span class="about-knowledge-item">1</span>
-                <span class="about-knowledge-item">1</span>
             </div>
 
             <div id="about-interests">
@@ -292,22 +293,22 @@
             <div id="about-certifications">
                 <div class="about-slides">
                     <div class="about-slide-number"></div>
-                    <img class="about-slide-img" src="static/img/476255.png">
+                    <img class="about-slide-img" src="static/img/476255.png" alt="">
                 </div>
 
                 <div class="about-slides">
                     <div class="about-slide-number"></div>
-                    <img class="about-slide-img" src="static/img/476259.jpg">
+                    <img class="about-slide-img" src="static/img/476259.jpg" alt="">
                 </div>
 
                 <div class="about-slides">
                     <div class="about-slide-number"></div>
-                    <img class="about-slide-img" src="static/img/7zj4gmjt7s741.jpg">
+                    <img class="about-slide-img" src="static/img/7zj4gmjt7s741.jpg" alt="">
                 </div>
 
                 <div class="about-slides">
                     <div class="about-slide-number"></div>
-                    <img class="about-slide-img" src="static/img/co4gny2nt8oz.jpg">
+                    <img class="about-slide-img" src="static/img/co4gny2nt8oz.jpg" alt="">
                 </div>
 
                 <a id="about-slideshow-back" onclick="moveToSlide(-1)">
