--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mohamed Y Abdelnasser</title>
     <link rel="stylesheet" href="static/css/shared.css">
+    <link rel="stylesheet" href="static/css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/png" href="static/img/Logo.png">
 
@@ -22,41 +23,51 @@
         </label>
     </div>
 
+    <div id="contact-title">
+        Contact Me
+    </div>
 
     <div id="overlay">
     </div>
 
-    <div id="projects-footer">
-        <div id="projects-nav-bar">
+    <div id="contact-footer">
+        <div id="contact-nav-bar">
 
-            <div class="projects-nav-bar-btn" onclick="navBtn(1)">
+            <div class="contact-nav-bar-btn" onclick="navBtn(1)">
                 <i class="fa fa-home icons"></i>
             </div>
-            <div class="projects-nav-bar-btn" onclick="navBtn(2)">
+            <div class="contact-nav-bar-btn" onclick="navBtn(2)">
                 <i class="fa fa-user icons"></i>
             </div>
-            <div class="projects-nav-bar-btn" onclick="navBtn(3)">
+            <div class="contact-nav-bar-btn" onclick="navBtn(3)">
                 <i class="fa fa-code icons"></i>
             </div>
-            <div class="projects-nav-bar-btn" onclick="navBtn(4)">
+            <div class="contact-nav-bar-btn" onclick="navBtn(4)">
                 <i class="fa fa-comments icons"></i>
             </div>
-            <div class="projects-nav-bar-btn" id="to-top-btn">
+            <div class="contact-nav-bar-btn" id="to-top-btn">
                 <i class="fa fa-hand-o-up icons"></i>
             </div>
         </div>
     </div>
 
+    <div id="contact-main-card">
 
-    <form id="contact-form">
-        <input name="sender-name" type="text" placeholder="Your name..." class="form__input" />
-        <input name="subject" type="text" placeholder="Topic..." class="form__input" />
-        <input name="sender-email" type="email" placeholder="Email..." class="form__input" />
+        <div id="contact-content-container">
+            contact-content-container
+        </div>
 
-        <textarea name="message-content" placeholder="Your Message..." class="form__input"></textarea>
-
-        <input type="submit" value="send" class="form__input form__input--button">
-    </form>
+        <div>
+            <form id="contact-form">
+                <input name="sender-email" type="email" placeholder="Email" class="contact-form-inputs" />
+                <input name="sender-name" type="text" placeholder="Name" class="contact-form-inputs" />
+                <input name="subject" type="text" placeholder="Topic" class="contact-form-inputs" />
+                <textarea name="message-content" placeholder="Message Content" class="contact-form-inputs"
+                    id="contact-form-textarea"></textarea>
+                <input type="submit" value="Send" id="contact-send-form-btn">
+            </form>
+        </div>
+    </div>
 
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
