Add - Description & contact information

--- a/contact.html
+++ b/contact.html
@@ -45,16 +45,57 @@
             <div class="contact-nav-bar-btn" onclick="navBtn(4)">
                 <i class="fa fa-comments icons"></i>
             </div>
-            <div class="contact-nav-bar-btn" id="to-top-btn">
-                <i class="fa fa-hand-o-up icons"></i>
-            </div>
         </div>
     </div>
 
     <div id="contact-main-card">
 
         <div id="contact-content-container">
-            contact-content-container
+            <p id="contact-content-title">
+                Get In Touch
+            </p>
+            <p id="contact-content-desc">
+                Lorem ipsum dolor sit amet primis blandit gravida. Maximus at donec ridiculus litora ad
+                porttitor id montes turpis enim.
+                Fames justo pede a nam semper maecenas dictum.
+                Fames justo pede a nam semper maecenas dictum.
+
+            </p>
+            <div id="contact-content-options">
+                <div class="contact-options-btn" onclick="window.open('https://github.com/Momad-Y', '_blank');">
+                    <i class="fa fa-github icons"></i>
+                </div>
+                <div class="contact-options-btn"
+                    onclick="window.open('https://www.linkedin.com/in/mohamed-y-abdelnasser/', '_blank');">
+                    <i class="fa fa-linkedin icons"></i>
+                </div>
+                <div class="contact-options-btn"
+                    onclick="window.open('mailto:Mohamed.Y.Abdelnasser@gmail.com', '_blank');">
+                    <i class="fa fa-envelope-o icons"></i>
+                </div>
+                <div class="contact-options-btn" onclick="copyPhoneNumber()" onmouseover="hoverPhoneNumber()">
+                    <i class="fa fa-phone icons contact-phone-icon"><span id="contact-phone-tooltip">Click To
+                            Copy</span></i>
+                </div>
+                <div class="contact-options-btn" onclick="window.open('https://wa.me/+  971503429805', '_blank');">
+                    <i class="fa fa-whatsapp icons"></i>
+                </div>
+                <div class="contact-options-btn" onclick="window.open('https://www.instagram.com/7.zsjj/', '_blank');">
+                    <i class="fa fa-instagram icons"></i>
+                </div>
+                <div class="contact-options-btn"
+                    onclick="window.open('https://steamcommunity.com/id/momadoo55555/       ', '_blank');">
+                    <i class="fa fa-steam icons"></i>
+                </div>
+                <div class="contact-options-btn"
+                    onclick="window.open('https://open.spotify.com/user/momad_55555?si=f0faf0d87fdf43a0', '_blank');">
+                    <i class="fa fa-spotify icons"></i>
+                </div>
+                <div class="contact-options-btn"
+                    onclick="window.open('https://www.chess.com/member/Momad_55555', '_blank');">
+                    <p id="chess-icon">♟︎</p>
+                </div>
+            </div>
         </div>
 
         <div>
