Fix - Contact me links

--- a/contact.html
+++ b/contact.html
@@ -74,17 +74,16 @@
                     <i class="fa fa-envelope-o icons"></i>
                 </div>
                 <div class="contact-options-btn" onclick="copyPhoneNumber()" onmouseover="hoverPhoneNumber()">
-                    <i class="fa fa-phone icons contact-phone-icon"><span id="contact-phone-tooltip">Click To
-                            Copy</span></i>
+                    <i class="fa fa-phone icons contact-phone-icon"><span id="contact-phone-tooltip"></span></i>
                 </div>
-                <div class="contact-options-btn" onclick="window.open('https://wa.me/+  971503429805', '_blank');">
+                <div class="contact-options-btn" onclick="window.open('https://wa.me/+971503429805', '_blank');">
                     <i class="fa fa-whatsapp icons"></i>
                 </div>
                 <div class="contact-options-btn" onclick="window.open('https://www.instagram.com/7.zsjj/', '_blank');">
                     <i class="fa fa-instagram icons"></i>
                 </div>
                 <div class="contact-options-btn"
-                    onclick="window.open('https://steamcommunity.com/id/momadoo55555/       ', '_blank');">
+                    onclick="window.open('https://steamcommunity.com/id/momadoo55555/', '_blank');">
                     <i class="fa fa-steam icons"></i>
                 </div>
                 <div class="contact-options-btn"
