Add - Tool tips to menu buttons

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
         <div id="home-nav-bar">
             <ul>
                 <div class="home-nav-bar-btn" onclick="navBtn(1)">
-                    <i class="fa fa-home icons"></i>
+                    <i class="fa fa-home icons"><span class="home-nav-bar-btn-tooltip">Home</span></i>
                 </div>
                 <div class="home-nav-bar-btn" onclick="navBtn(2)">
-                    <i class="fa fa-user icons"></i>
+                    <i class="fa fa-user icons"><span class="home-nav-bar-btn-tooltip">About Me</span></i>
                 </div>
                 <div class="home-nav-bar-btn" onclick="navBtn(3)">
-                    <i class="fa fa-code icons"></i>
+                    <i class="fa fa-code icons"><span class="home-nav-bar-btn-tooltip">My Projects</span></i>
                 </div>
                 <div class="home-nav-bar-btn" onclick="navBtn(4)">
-                    <i class="fa fa-comments icons"></i>
+                    <i class="fa fa-comments icons"><span class="home-nav-bar-btn-tooltip">Contact Me</span></i>
                 </div>
             </ul>
         </div>
