--- a/about.html
+++ b/about.html
@@ -27,19 +27,19 @@
     <div id="about-nav-bar">
         <ul>
             <div class="about-nav-bar-btn about-nav-bar-btn-redirect" onclick="navBtn(1)">
-                <i class="fa fa-home icons"></i>
+                <i class="fa fa-home icons"><span class="about-nav-bar-btn-tooltip">Home</span></i>
             </div>
             <div class="about-nav-bar-btn about-nav-bar-btn-redirect" onclick="navBtn(2)">
-                <i class="fa fa-user icons"></i>
+                <i class="fa fa-user icons"><span class="about-nav-bar-btn-tooltip">About Me</span></i>
             </div>
             <div class="about-nav-bar-btn about-nav-bar-btn-redirect" onclick="navBtn(3)">
-                <i class="fa fa-code icons"></i>
+                <i class="fa fa-code icons"><span class="about-nav-bar-btn-tooltip">My Projects</span></i>
             </div>
             <div class="about-nav-bar-btn about-nav-bar-btn-redirect" onclick="navBtn(4)">
-                <i class="fa fa-comments icons"></i>
+                <i class="fa fa-comments icons"><span class="about-nav-bar-btn-tooltip">Contact Me</span></i>
             </div>
             <div class="about-nav-bar-btn" id="to-top-btn">
-                <i class="fa fa-hand-o-up icons"></i>
+                <i class="fa fa-hand-o-up icons"><span class="about-nav-bar-btn-tooltip">Go To Top</span></i>
             </div>
 
         </ul>
